--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Form</title>
-    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
 
